<resources>
    <string name="app_name">FirstIteration_Test</string>
    <string name="action_settings">Settings</string>
    <string name="first_affirmation">I am a capable UX-Designer</string>
    <string name="first_Remind_me">Remind me: Once a day</string>
    <string name="first_time">8:30 AM</string>
    <string name="Disable_Button_Name">Disable</string>
    <string name="Edit_Button_Name">Edit</string>
    <string name="Test_string_for_github">Test</string>
</resources>
