<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="8dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="329dp"
        android:layout_height="422dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextView"
                android:paddingStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_affirmation"
                android:textColor="@color/color70black"
                android:textSize="64sp" />

            <View
                style="@style/Divider"
                android:visibility="visible" />

            <TextView
                android:paddingStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_Remind_me"
                android:textColor="@color/color70black"
                android:textSize="20sp"/>

            <TextView
                android:paddingStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_time"
                android:textColor="@color/color70black"
                android:textSize="14dp"/>

            <LinearLayout
                android:paddingStart="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/disableButtonPressed"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:text="@string/Disable_Button_Name"
                    android:visibility="visible" />

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="80dp"
                    android:id="@+id/editButtonPressed"
                    android:layout_height="match_parent"
                    android:background="@drawable/transparent_bg_bordered_button"
                    android:text="@string/Edit_Button_Name"
                    android:textColor="@color/color70black"
                    android:visibility="visible" />
            </LinearLayout>




        </LinearLayout>
    </android.support.v7.widget.CardView>

    <include
        android:id="@+id/include2"
        layout="@layout/content_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="80dp"
        app:backgroundTint="@color/colorAccent"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.986"
        app:layout_constraintStart_toEndOf="@+id/include2"
        app:layout_constraintTop_toBottomOf="@+id/include2"
        app:srcCompat="@drawable/ic_add_material" />

</android.support.constraint.ConstraintLayout>